<resources>
    <string name="app_name">QuadraStats</string>
    <string name="team_splyce">Team Splyce</string>
    <string name="region_br">Brazil</string>
    <string name="region_eune">EU Nordic &amp; East</string>
    <string name="region_euw">EU West</string>
    <string name="region_kr">Korea</string>
    <string name="region_lan">Latin America North</string>
    <string name="region_las">Latin America South</string>
    <string name="region_na">North America</string>
    <string name="region_oce">Oceania</string>
    <string name="region_ru">Russia</string>
    <string name="region_tr">Turkey</string>
    <string name="auth_summoner_name">Summoner Name</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_confirm_password">Confirm password</string>
    <string name="auth_password_mismatch">Password mismatch</string>
    <string name="auth_empty_field">Field cannot be empty</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_register">Register</string>
    <string name="auth_reset_password">Reset Password</string>
    <string name="auth_successful_reset">Password successfully reset</string>
    <string name="auth_go_to_register">No account yet? Register</string>
    <string name="auth_go_to_sign_in">Already have an account? Sign In</string>
    <string name="auth_validate_ownership_instructions">
        Almost done! Change one of your rune pages to the number below in order
        to prove ownership of the summoner account. After changing your rune page, wait
        about five seconds before pressing DONE to allow for the Riot servers to update.
    </string>
    <string name="auth_select_region">Select Region</string>
    <string-array name="auth_select_region_array">
        <item>@string/auth_select_region</item>
        <item>@string/region_br</item>
        <item>@string/region_eune</item>
        <item>@string/region_euw</item>
        <item>@string/region_kr</item>
        <item>@string/region_lan</item>
        <item>@string/region_las</item>
        <item>@string/region_na</item>
        <item>@string/region_oce</item>
        <item>@string/region_ru</item>
        <item>@string/region_tr</item>
    </string-array>
    <string name="b_menu">Menu</string>
    <string name="ma_activity_title">Manage Account</string>
    <string name="ma_change_email">Change Email</string>
    <string name="ma_change_password">Change Password</string>
    <string name="ma_sign_out">Sign Out</string>
    <string name="ma_licenses">Licenses</string>
    <string name="ma_license_info">License Information</string>
    <string name="ma_new_email">New Email</string>
    <string name="ma_password">Password</string>
    <string name="ma_current_password">Current Password</string>
    <string name="ma_new_password">New Password</string>
    <string name="ma_confirm_new_password">Confirm New Password</string>
    <string name="ma_password_mismatch">Password mismatch</string>
    <string name="ma_successful_email_change">Email successfully changed</string>
    <string name="ma_successful_password_change">Password successfully changed</string>
    <string name="mf_activity_title">Manage Friends</string>
    <string name="mf_no_friends">Click the + button to add friends</string>
    <string name="mf_summoner_name">Friend Summoner Name</string>
    <string name="mf_remove_friend_confirm">
        Are you sure you want to remove this summoner from your friends list?
    </string>
    <string name="mf_add_friend">Add Friend</string>
    <string name="mf_update">Update</string>
    <string name="mf_bronze">Bronze</string>
    <string name="mf_silver">Silver</string>
    <string name="mf_gold">Gold</string>
    <string name="mf_plat">Platinum</string>
    <string name="mf_diamond">Diamond</string>
    <string name="mf_master">Master</string>
    <string name="mf_challenger">Challenger</string>
    <string name="mf_friend_added_success">Friend added successfully</string>
    <string name="mf_friend_removed_success">Friend removed successfully</string>
    <string name="mf_summoner_sync_success">Summoners synced successfully</string>
    <string name="mf_update_success">Update triggered successfully</string>
    <string name="mf_update_confirm">
        Are you sure you want to trigger a stats update? You can only do this once per hour.
    </string>
    <string name="mf_update_denied">
        You have recently triggered a stats update and need to wait longer before you can do so again.
    </string>
    <string name="bs_loading">Loading&#8230;</string>
    <string name="bs_no_stats">No stats were found. Swipe down to retrieve the newest stats.</string>
    <string name="bs_no_friends">You have no friends to compare stats with!</string>
    <string name="bs_add_friends">Add Friends</string>
    <string name="wrd_win_ratio">Win Ratio</string>
    <string name="wrd_summoner">Summoner</string>
    <string name="wrd_played">Played</string>
    <string name="wrd_won">Won</string>
    <string name="wrd_ratio">Ratio</string>
    <string name="wrd_not_applicable">N/A</string>
    <string name="rg_activity_title">Recent Games</string>
    <string name="rg_filter_data">Filter Data</string>
    <string name="rg_win_rates">Win Rates</string>
    <string name="rg_average">Average</string>
    <string name="rg_cs_at_ten">CS At 10</string>
    <string name="rg_cs_diff_at_ten">CS Differential At 10</string>
    <string name="rg_cs_per_min">CS Per Minute</string>
    <string name="rg_gold_per_min">Gold Per Minute</string>
    <string name="rg_first_blood">First Blood Participation</string>
    <string name="rg_kills">Kills</string>
    <string name="rg_dmg_per_min">Damage Per Minute</string>
    <string name="rg_killing_spree">Largest Killing Spree</string>
    <string name="rg_multi_kills">Largest Multi Kill</string>
    <string name="rg_first_tower">First Tower Participation</string>
    <string name="rg_assists">Assists</string>
    <string name="rg_kda">KDA</string>
    <string name="rg_kill_participation">Kill Participation</string>
    <string name="rg_dmg_taken_per_death">Damage Taken Per Death</string>
    <string name="rg_wards_bought">Wards Bought</string>
    <string name="rg_wards_placed">Wards Placed</string>
    <string name="st_activity_title">Season Totals</string>
    <string name="st_per_game">Per Game</string>
    <string name="st_totals">Totals</string>
    <string name="gwf_activity_title">Games With Friends</string>
    <string name="button_done">Done</string>
    <string name="button_yes">Yes</string>
    <string name="button_go">Go</string>
    <string name="button_cancel">Cancel</string>
    <string name="license_mp_android_chart">
        This software uses MPAndroidChart \n \n

        Copyright 2016 Philipp Jahoda \n \n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n \n

        http://www.apache.org/licenses/LICENSE-2.0 \n \n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
        WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
        License for the specific language governing permissions and limitations
        under the License. \n \n

        Special thanks to danielgindi, mikegr, tony and jitpack.io for their
        contributions to this project.
    </string>
    <string name="license_picasso">
        This software uses Picasso \n \n

        Copyright 2013 Square, Inc. \n \n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n \n

        http://www.apache.org/licenses/LICENSE-2.0 \n \n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_ok_http">
        This software uses OkHttp \n \n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n \n

        http://www.apache.org/licenses/LICENSE-2.0 \n \n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_active_android">
        This software uses ActiveAndroid \n \n

        Copyright &#169; 2010 Michael Pardo \n \n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n \n

        http://www.apache.org/licenses/LICENSE-2.0 \n \n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_material_ripple">
        This software uses Material Ripple \n \n

        Copyright 2015 Balys Valentukevicius \n \n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n \n

        http://www.apache.org/licenses/LICENSE-2.0 \n \n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_gson">
        This software uses Gson \n \n

        Copyright 2008 Google Inc. \n \n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n \n

        http://www.apache.org/licenses/LICENSE-2.0 \n \n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_acra">
        This software uses ACRA \n \n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n \n

        http://www.apache.org/licenses/LICENSE-2.0 \n \n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
</resources>