<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_standard"
        android:text="@string/license_mp_android_chart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/spacing_standard"
        android:layout_marginTop="@dimen/spacing_standard"
        android:background="@color/divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_standard"
        android:text="@string/license_picasso"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/spacing_standard"
        android:layout_marginTop="@dimen/spacing_standard"
        android:background="@color/divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_standard"
        android:text="@string/license_ok_http"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/spacing_standard"
        android:layout_marginTop="@dimen/spacing_standard"
        android:background="@color/divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_standard"
        android:text="@string/license_active_android"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/spacing_standard"
        android:layout_marginTop="@dimen/spacing_standard"
        android:background="@color/divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_standard"
        android:text="@string/license_material_ripple"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/spacing_standard"
        android:layout_marginTop="@dimen/spacing_standard"
        android:background="@color/divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_standard"
        android:text="@string/license_gson"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/spacing_standard"
        android:layout_marginTop="@dimen/spacing_standard"
        android:background="@color/divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_standard"
        android:text="@string/license_acra"/>
</LinearLayout>