<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_standard"
            android:text="@string/wrd_win_ratio"
            android:textSize="@dimen/text_size_win_ratio"/>

        <TextView
            android:id="@+id/user_win_ratio_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_standard"
            android:textSize="@dimen/text_size_win_ratio"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_transparent"
        android:padding="@dimen/spacing_standard">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:gravity="center"
            android:text="@string/wrd_summoner"
            android:textSize="@dimen/text_size_large"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/wrd_played"
            android:textSize="@dimen/text_size_large"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/wrd_won"
            android:textSize="@dimen/text_size_large"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/wrd_ratio"
            android:textSize="@dimen/text_size_large"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>