<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/auth_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:theme="@style/AppTheme.EditText"/>

    <EditText
        android:id="@+id/summoner_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/auth_summoner_name"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:theme="@style/AppTheme.EditText"/>

    <Spinner
        android:id="@+id/region_select_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/accent"
            android:text="@string/button_cancel"
            android:textSize="20sp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/accent"
            android:text="@string/button_done"
            android:textSize="20sp"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>
</LinearLayout>