<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/friend_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/mf_summoner_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/button_cancel"
            android:textSize="20sp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/button_done"
            android:textSize="20sp"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>
</LinearLayout>